src/test/ui/parser/raw/raw-literal-self.stderr
error: `r#self` is not currently supported.
  --> $DIR/raw-literal-self.rs:1:14
   |
LL | fn self_test(r#self: u32) {
   |              ^^^^^^

error: aborting due to previous error

