src/test/ui/parser/raw/raw-literal-self.rs
fn self_test(r#self: u32) {
    //~^ ERROR `r#self` is not currently supported.
}
